--- a/Lab-13/index.html
+++ b/Lab-13/index.html
@@ -18,10 +18,9 @@
 
   <div class="mt-4">
     <button class="btn btn-primary me-2" onclick="addStyle()">Add Style</button>
-    <button class="btn btn-success me-2" onclick="removeStyle()">Remove Style</button>
+    <button class="btn btn-success me-2" id="removeStyle">Remove Style</button>
   </div>
   <div class="d-flex justify-content-center mt-4 gap-5">
-     <button class="btn btn-outline-info" onclick="prevPage()">Prev</button>
     <button class="btn btn-outline-info" onclick="nextPage()">Next</button>
   </div>
 
